fix: Fix style of Sidebar: background-color, z-index

--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -36,7 +36,7 @@ label {
 }
 
 .nav-menu {
-  background-color: rgb(52,108,166);
+  background-color: #f6f7f9;
   width: 250px;
   height: 100vh;
   justify-content: center;
@@ -44,6 +44,7 @@ label {
   top: 0;
   left:-100%;
   transition:850ms;
+  z-index: 50;
 }
 
 .nav-menu.active {
